tests/paczka2/big_fuzzy/55963470.err
Error in line 11: aNg S416 64,9
Error in line 14: ZMEgqPM S388 22,4
Error in line 23: q1RYOSM A575 30,6
Error in line 19: gW6qdTxoK S416 10,0
Error in line 29: gW6qdTxoK A575 20,4
Error in line 35: aNg S388 324,0
Error in line 68: aNg S416 88,0
Error in line 49: HkyhOjia S388 31,9
Error in line 72: q1RYOSM A575 43,7
Error in line 82: aNg A575 19,3
Error in line 88: HkyhOjia S416 1,6
Error in line 84: gW6qdTxoK A575 81,6
Error in line 110: q1RYOSM S416 34,4
Error in line 115: gW6qdTxoK A575 39,5
Error in line 141: aNg S368 260,3
Error in line 143: aNg A575 18,4
Error in line 157: gW6qdTxoK S368 90,2
Error in line 163: gW6qdTxoK S416 89,7
Error in line 164: aNg S416 9,2
Error in line 168: aNg S388 47,1
Error in line 177: s6dJ5kMt7f S368 15,06
Error in line 188: s6dJ5kMt7f S368 73,9
Error in line 191: s6dJ5kMt7f S388 54,2
Error in line 198: s6dJ5kMt7f S368 28,9
Error in line 222: ZMEgqPM S388 74,1
Error in line 194: S416 S368 94,2
Error in line 240: HkyhOjia S368 -1,1
Error in line 234: q1RYOSM S416 29,7
Error in line 243: q1RYOSM S368 46,8
